# Modern-Cplusplus-Programming-with-Test-Driven-Development

./: README.md
Chapter_02_Test_Driven_Development_A_First_Example/Soundex/: CMakeLists.txt  README.md  Soundex.hpp  SoundexTest.cpp  main.cpp  sum_integers.cpp  sum_integers.hpp
Chapter_02_Test_Driven_Development_A_First_Example/Soundex/src/: main.cpp
Chapter_02_Test_Driven_Development_A_First_Example/Soundex/tests/: CMakeLists.txt  SoundexTests.cpp
Chapter_02_Test_Driven_Development_A_First_Example/oldSoundex/: CMakeLists.txt
Chapter_02_Test_Driven_Development_A_First_Example/oldSoundex/.cache/clangd/index/: Soundex.hpp.A934641BB258020E.idx  SoundexTest.cpp.AE03CF50BF0AA6B4.idx
Chapter_02_Test_Driven_Development_A_First_Example/oldSoundex/src/: Soundex.cpp  Soundex.hpp  main.cpp
Chapter_02_Test_Driven_Development_A_First_Example/oldSoundex/tests/: CMakeLists.txt  SoundexTest.cpp
